Fixed CSS so tables that are higher than the page height no longer breaks the structure

--- a/src/main/resources/static/general.css
+++ b/src/main/resources/static/general.css
@@ -20,7 +20,7 @@
     width: 100%;
     background-color: #f2f2f2;
     margin: auto;
-    height: 80vh;
+    min-height: 80vh;
 }
 
 
